test/trivial/deitz/test_imag_coerce2.good
test_imag_coerce2.chpl:1: error: type mismatch in assignment from int(64) to imag(64)
